# my-rust-book-workshops

./: README.md  test.drawio
add/: Cargo.toml
add/add_two/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
branches/src/: main.rs
cargo_and_crates_io/: Cargo.toml
cargo_and_crates_io/src/: lib.rs  main.rs
chapt-3-extras/: Cargo.toml
chapt-3-extras/src/: main.rs
closures/src/: main.rs
common-collections/src/: main.rs
error_handling/: Cargo.toml  hello.txt
error_handling/src/: main.rs
functions/src/: main.rs
generics_traits_lifetimes/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/src/: main.rs
hello_world/: main
intro-to-enums/: Cargo.toml
intro-to-enums/src/: main.rs
intro-to-ownership/: Cargo.toml
intro-to-ownership/src/: main.rs
intro-to-structs/: Cargo.toml
intro-to-structs/src/: main.rs
iterators/src/: lib.rs  main.rs
managing-and-organizing-feats/: Cargo.toml
managing-and-organizing-feats/src/: main.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
restaurant-lib/src/: front_of_house.rs  lib.rs
smart-pointers/src/: main.rs
variables/src/: main.rs
